package streams.cta.io.protobuf;

option java_package = "streams.cta.io.protobuf";
option java_outer_classname = "RawCTAEvent";

message RawEvent {

    required string messageType = 1;

    required int32 telescope_id = 2;
    required int32 roi = 3;
    required int32 num_pixel = 4;
    repeated int32 samples = 5 [packed=true];
}